--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seadragon LLM - Your Personal AI Tutor</title>
-    <meta name="description" content="A personal AI tutor powered by Llama 3 for math problems, coding help, and textbook assistance." />
+    <title>InkMortal LLM - Ancient Cultivation Wisdom</title>
+    <meta name="description" content="Immortal wisdom cultivated through the ages - solving problems with the power of dragon energy." />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <script src="/theme-adjustments.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
