--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>InkMortal LLM - Ancient Cultivation Wisdom</title>
     <meta name="description" content="Immortal wisdom cultivated through the ages - solving problems with the power of dragon energy." />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <script src="/theme-adjustments.js" defer></script>
+    <script src="/change-logo.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
